2006-05-11  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/gcj/runtime/NameFinder.java (blacklist): New static field.
	(lookup): If addr2line fails to find an address, flag the binary as
	having no debug info and avoid calling addr2line on it again.

2006-05-11  David Daney  <ddaney@avtrex.com>

	* testsuite/libjava.compile/PR20418.java: New.
	* testsuite/libjava.compile/PR20418.xfail: New.

2006-05-11  Andrew Haley  <aph@redhat.com>

	* gnu/gcj/runtime/natSharedLibLoader.cc (init): Remove debugging
	line.

2006-05-10  Andrew Haley  <aph@redhat.com>

	* java/lang/natClassLoader.cc: Add comments.

2006-05-09  Andrew Haley  <aph@redhat.com>

	* prims.cc (_Jv_soleIndirectCompiledEngine): New.
	* include/execution.h (Jv_CompiledEngine::do_allocate_static_fields):
	Remove body.
	(_Jv_CompiledEngine::allocate_field_initializers): New.
	(_Jv_CompiledEngine::_Jv_CompiledEngine): Initialize
	allocate_field_initializers.
	(class _Jv_IndirectCompiledClass): New.
	(struct _Jv_IndirectCompiledEngine): New.
	* java/lang/Class.h: (IndirectCompiledEngine): New.
	* java/lang/natClassLoader.cc (_Jv_NewClassFromInitializer): Set
	engine to _Jv_soleIndirectCompiledEngine
	* link.cc (ensure_fields_laid_out): Call
	engine->allocate_field_initializers().

2006-05-06  Andreas Tobler  <a.tobler@schweiz.ch>

	* testsuite/libjava.jni/jni.exp (gcj_jni_compile_c_to_so): Add check for
	HP-UX and add appropriate extension for shared libraries, sl.
	(gcj_jni_test_one): Likewise.
	
	* testsuite/lib/libjava.exp (libjava_find_lib): Add sl to the shared
	library extensions.

2006-05-05  Tom Tromey  <tromey@redhat.com>

	PR libgcj/27294:
	* java/lang/natVMClassLoader.cc (defineClass): Throw
	VirtualMachineError if no interpreter configured.

2006-05-03  Andrew Haley  <aph@redhat.com>

	PR libgcj/27352
	* java/lang/Class.java (getClassLoader(Class)): New.
	forName(String, Class): New.
	* java/lang/natClass.cc (getClassLoader(Class)): New.

2006-05-02  Andrew Haley  <aph@redhat.com>
